# AEX

./: .gitignore  AGENT.MD  GEMINI.MD  README.md  TODOLIST.MD  pyproject.toml
docs/: architecture.md  interface_specs.md  module_map.md  tech_stack.md
src/aex_core/: __init__.py  app.py  models.py  repository.py  routes.py  service.py
src/aex_service/: __init__.py  api.py  errors.py  main.py  models.py  repository.py
tests/: test_api.py  test_app.py
